--- a/Portfolio/assets/index.html
+++ b/Portfolio/assets/index.html
@@ -14,13 +14,13 @@
              <nav>
                 <ul>
                     <li>
-                        <a href="about-me">About Me</a>
+                        <a href="#about-me">About Me</a>
                     </li>
                     <li>
-                        <a href="projects">Projects</a>
+                        <a href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a href="contact-info">Contact Me</a>
+                        <a href="#contact-info">Contact Me</a>
                     </li>
                 </ul>
              </nav>
@@ -28,7 +28,7 @@
 
         <!--Jumbotron-->
         <section class="hero">
-            <img class="image1" src="./assets/images/ProfilePic.png" alt="personal picture"/>
+            <img class="image1" src="assets/images/ProfilePic.jpg" alt="personal picture"/>
             <div>
                 <h2>Fullstack Developer - Solidity's Next!</h2>
             </div>
@@ -45,13 +45,79 @@
                 <div class="about-text">
                     <p>
                         I am Damian De La Garza. Tody I work in Dallas, Tx but am originally from Mexico. My motto is "Comfort is the enemy of innovation". </br> I've been working in IT consulting for about 5 years now, previously I earned my B.S in Economics and Entreprenurship.
-                        This class has teached us that in order to be succesful in the coding world, may hours need to be invested into your work, so I do hope you enjoy my work below. I'm keen to dive into solidity and start innovating within that ecosystem so please feel free to reach out if you like my work </br> ENJOY!
-
+                        This class has teached us that in order to be succesful in the coding world, may hours need to be invested into your work, so I do hope you enjoy my work below. I'm keen to dive into solidity and start innovating within that ecosystem so please feel free to reach out if you like my work. </br> ENJOY!
                     </p>
                 </div>
             </div>
         </section>
-    </body>
+
+        <!--Projects Section-->
+        <section id="projects" class="about">
+            <div class="flex-row">
+                <h2 class="tittle-section">Projects</h2>
+            </div>
+            <div class="about-info">
+                <div class="vl-2">
+                </div>
+                <div class="container">
+                    <div class="project-image">                       
+                    <figure class="project-image-1">
+                        <a href="https://damiandlg.github.io/run_buddy/">
+                            <img src="assets/images/hero-bg.jpg" class="project--image" alt="Run buddy website">
+                            <figcaption>Trainer App</br>HTML CSS</figcaption>                 
+                        </a>
+                        </figure>
+
+                      <figure class="project-image-2">
+                          <a href="https://damiandlg.github.io/Work-day-Scheduler/">
+                            <img src="assets/images/workday-scheduler.png" class="project--image" alt="Day Scheduler">
+                            <figcaption>Work Day Scheduler</br>Java Script</figcaption>
+                          </a>
+                      </figure>
+
+                      <figure class="project-image-3">
+                        <a href="https://chitizpanday.github.io/foodPursuit/">
+                            <img src="assets/images/food-pursuit.jpeg" class="project--image" alt="Food Recipe">
+                            <figcaption>Food Pursuit</br>HTML CSS JavaScript jQuery Bulma</figcaption>
+                        </a>
+                      </figure>
+
+                      <figure class="project-image-4">
+                        <a href="https://damiandlg.github.io/Horiseon/">
+                            <img src="assets/images/horiseon.jpg" class="project--image" alt="Horiseon">
+                            <figcaption>Horiseon</br>HTML</figcaption>
+                        </a>
+                      </figure>
+                    </div>
+                </div>
+            </div>
+         </section>
+
+
+        <!-- Contact me section -->
+                <section id="contact-me" class="about">
+                    <div class="flex-row">
+                        <h2 class="section-title">Contact Me</h2> 
+                    </div>
+                <div class="about-info">
+                    <div class="vl-3">
+                    </div>
+                    <div class="contact-info">
+                        <!--List item elements-->
+                    <ul>
+                        <li>
+                            <a href="#number">214-886-67**</a>   
+                        </li>
+                        <li>
+                            <a href="#email">damian.delagarzaf@gmail.com</a>   
+                        </li>
+                        <li>
+                            <a href="#githb">GitHub</a>   
+                        </li>                 
+                    </ul>
+                    </div>
+                </section> 
+                    </body>
 
 
 </html>
