only missing fomrat of the pages, but everything works

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -61,28 +61,28 @@
                 </div>
                 <div class="container">
                     <div class="project-image">                       
-                    <figure class="project-image-1">
+                        <figure class=" project--item project-image-1">
                         <a href="https://damiandlg.github.io/run_buddy/">
                             <img src="assets/images/hero-bg.jpg" class="project--image" alt="Run buddy website">
                             <figcaption>Trainer App</br>HTML CSS</figcaption>                 
                         </a>
                         </figure>
 
-                      <figure class="project-image-2">
+                      <figure class="project--item project-image-2">
                           <a href="https://damiandlg.github.io/Work-day-Scheduler/">
                             <img src="assets/images/workday-scheduler.png" class="project--image" alt="Day Scheduler">
                             <figcaption>Work Day Scheduler</br>Java Script</figcaption>
                           </a>
                       </figure>
 
-                      <figure class="project-image-3">
+                      <figure class="project--item project-image-3">
                         <a href="https://chitizpanday.github.io/foodPursuit/">
                             <img src="assets/images/food-pursuit.jpeg" class="project--image" alt="Food Recipe">
                             <figcaption>Food Pursuit</br>HTML CSS JavaScript jQuery Bulma</figcaption>
                         </a>
                       </figure>
 
-                      <figure class="project-image-4">
+                      <figure class="project--item project-image-4">
                         <a href="https://damiandlg.github.io/Horiseon/">
                             <img src="assets/images/horiseon.jpg" class="project--image" alt="Horiseon">
                             <figcaption>Horiseon</br>HTML</figcaption>
