--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
                             <figcaption>Horiseon</br>HTML</figcaption>
                         </a>
                       </figure>
+
+                      <figure class="project--item project-image-5">
+                        <a href="https://636451c31b88430e82819f26--deluxe-starburst-d46935.netlify.app/">
+                            <img src="assets/images/Project-3.png" class="project--image" alt="Coding-Blog">
+                            <figcaption>Coding-Blog</br>React</figcaption>
+                        </a>
+                      </figure>
                     </div>
                 </div>
             </div>
